--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ charset-normalizer==3.3.2
 click==8.1.8
 colorama==0.4.6
 dnspython==2.7.0
-fastapi==0.115.12
+fastapi==0.115.*
 flatbuffers==25.2.10
 frozendict==2.4.4
 gast==0.6.0
